# cyberfabric-core

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  release-plz.toml
.cypilot-adapter/: AGENTS.md  artifacts.json
modules/credstore/plugins/credentials-storage-plugin/: Cargo.toml
modules/credstore/plugins/credentials-storage-plugin/src/: config.rs  lib.rs  module.rs
modules/credstore/plugins/credentials-storage-plugin/src/api/rest/: dto.rs  error.rs  handlers.rs  mod.rs  routes.rs
modules/credstore/plugins/credentials-storage-plugin/src/domain/: credential.rs  credential_definition.rs  error.rs  mod.rs  schema.rs
modules/credstore/plugins/credentials-storage-plugin/src/domain/service/: credential_definitions.rs  credentials.rs  mod.rs  schemas.rs
modules/credstore/plugins/credentials-storage-plugin/src/infra/: crypto.rs
modules/credstore/plugins/credentials-storage-plugin/src/infra/db/: mod.rs
modules/mini-chat/mini-chat/: Cargo.toml
modules/mini-chat/mini-chat-sdk/: Cargo.toml
modules/mini-chat/mini-chat-sdk/src/: audit_models.rs  client.rs  error.rs  lib.rs  models.rs  plugin_api.rs
modules/mini-chat/mini-chat/src/: background_workers.rs  config.rs  lib.rs  module.rs
modules/mini-chat/mini-chat/src/api/rest/: dto.rs  error.rs  sse.rs
modules/mini-chat/mini-chat/src/api/rest/handlers/: attachments.rs  chats.rs  messages.rs  mod.rs  models.rs  reactions.rs  turns.rs
modules/mini-chat/mini-chat/src/api/rest/routes/: attachments.rs  chats.rs  messages.rs  mod.rs  models.rs  quota.rs  reactions.rs  turns.rs
modules/mini-chat/mini-chat/src/config/: background.rs
modules/mini-chat/mini-chat/src/domain/: error.rs  llm.rs  mime_validation.rs  mod.rs  models.rs  stream_events.rs
modules/mini-chat/mini-chat/src/domain/model/: audit_envelope.rs  finalization.rs  mod.rs  quota.rs
modules/mini-chat/mini-chat/src/domain/ports/: metric_labels.rs  metrics.rs  mod.rs
modules/mini-chat/mini-chat/src/domain/repos/: attachment_repo.rs  chat_repo.rs  message_repo.rs  mod.rs  model_pref_repo.rs  model_resolver.rs  outbox_enqueuer.rs  quota_usage_repo.rs  reaction_repo.rs  thread_summary_repo.rs  turn_repo.rs  vector_store_repo.rs
modules/mini-chat/mini-chat/src/domain/service/: attachment_service.rs  attachment_service_test.rs  chat_service.rs  context_assembly.rs  finalization_service.rs  message_service_test.rs  mod.rs  model_service.rs  quota_service.rs  reaction_service.rs  replay.rs  stream_service.rs  test_helpers.rs  token_estimator.rs  turn_service.rs  turn_service_test.rs
modules/mini-chat/mini-chat/src/domain/service/stream_service/: mod.rs  provider_task.rs  types.rs
modules/mini-chat/mini-chat/src/infra/: metrics.rs  mod.rs  oagw_provisioning.rs  outbox.rs
modules/mini-chat/mini-chat/src/infra/db/: mod.rs
modules/mini-chat/mini-chat/src/infra/db/entity/: attachment.rs  chat_turn.rs  message.rs
modules/mini-chat/mini-chat/src/infra/db/migrations/: m20260302_000001_initial.rs  mod.rs
modules/mini-chat/mini-chat/src/infra/db/repo/: attachment_repo.rs  chat_repo.rs  message_repo.rs  message_repo_test.rs  mod.rs  model_pref_repo.rs  quota_usage_repo.rs  reaction_repo.rs  repo_test.rs  thread_summary_repo.rs  turn_repo.rs  vector_store_repo.rs
modules/mini-chat/mini-chat/src/infra/leader/: k8s_lease.rs
modules/mini-chat/mini-chat/src/infra/llm/: mod.rs
modules/mini-chat/mini-chat/src/infra/llm/providers/: azure_file_storage.rs  dispatching_storage.rs  openai_chat.rs  openai_file_storage.rs  openai_responses.rs  rag_http_client.rs
modules/mini-chat/mini-chat/src/infra/model_policy/: mod.rs
modules/mini-chat/mini-chat/src/infra/plugins/: mod.rs
modules/mini-chat/mini-chat/src/infra/plugins/static_audit/: mod.rs  module.rs  service.rs
modules/mini-chat/mini-chat/src/infra/plugins/static_model_policy/: mod.rs  module.rs  service.rs  tests.rs
modules/mini-chat/mini-chat/src/infra/workers/: orphan_watchdog.rs  thread_summary_worker.rs
(+573 files in other folders)
