[package]
name = "cf-credentials-storage-plugin"
description = "Credentials storage plugin for credstore: DB-backed credential management with schemas, definitions, encryption, and tenant inheritance"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modules"]
categories = ["web-programming"]

[lib]
name = "credentials_storage_plugin"

[lints]
workspace = true

[dependencies]
# CredStore SDK — plugin trait + shared models
credstore-sdk = { workspace = true }

# Types registry for GTS plugin registration
types-registry-sdk = { workspace = true }

# Core modkit
modkit = { workspace = true }
modkit-db = { workspace = true, features = ["pg"] }
modkit-db-macros = { workspace = true }
modkit-security = { workspace = true }
modkit-macros = { workspace = true }
modkit-errors = { workspace = true }
modkit-errors-macro = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID + time
uuid = { workspace = true }
chrono = { workspace = true }

# Database — SeaORM (driver features come from modkit-db)
sea-orm = { workspace = true, features = ["postgres-array"] }
sea-orm-migration = { workspace = true }

# HTTP + OpenAPI
axum = { workspace = true, features = ["macros"] }
utoipa = { workspace = true }

# Logging
tracing = { workspace = true }

# Encryption (AES-256-GCM) — not in workspace, local to this plugin
aes-gcm = "0.10"
rand = { workspace = true }

# JSON Schema validation
jsonschema = { workspace = true }
